@@ -43,9 +43,7 @@ static char *rcsid = "$OpenBSD: strmode.c,v 1.3 1997/06/13 13:57:20 deraadt Exp 
 #include <string.h>
 
 void
-strmode(mode, p)
-	register mode_t mode;
-	register char *p;
+strmode(register mode_t mode, register char *p)
 {
 	 /* print type */
 	switch (mode & S_IFMT) {
